2007-08-21 Denis Ovsienko

	* ospfd.h: Extend struct ospf with maxsndbuflen field and
	  define its default value.
	* ospfd.c: (ospf_new) init maxsndbuflen
	* ospf_interface.c: (ospf_if_up) Call ospf_adjust_sndbuflen()
	  for each regular interface being brought up.
	* ospf_network.[ch]: (ospf_adjust_sndbuflen) New function
	  makes sure ospf socket sending buffer is large enough
	  to cover the biggest interface MTU we have seen ever.
	* ospf_packet.c: (ospf_write) Use maxsndbuflen to decide on
	  the biggest amount of data we are going to send at once.

2007-08-07 Paul Jakma <paul.jakma@sun.com>

	* ospf_spf.c: (ospf_spf_next) Finish off the explanatory
	  comment made in previous commit

2007-08-07 Atis Elsts <atis@mikrotik.com>

	* ospf_spf.c: (ospf_spf_next) Sort heap in correct direction
	  after vertex cost is changed, thus fixing incorrect SPF
	  calculation on certain topologies.

2007-08-06 Paul Jakma <paul.jakma@sun.com>

	* ospf_lsa.c: (router_lsa_flags) Bug #331, NSSA regression caused
	  caused ASBRs to not advertise E-bit into NSSA areas.

2007-05-09 Milan Kocian <milon@wq.cz>

	* ospf_vty.c: Fix commands: 'ip ospf authentication A.B.C.D',
	  'no ip ospf authentication A.B.C.D', 'no ip ospf
	  authentication-key A.B.C.D'. Simply fix argv's indexes and
          argc check in DEFUN functions.

2007-05-07 Paul Jakma <paul.jakma@sun.com>

	* ospf_spf.c: (ospf_vertex_new) Dont init vertices to infinity,
	  just let 0 be a special case.
	  (ospf_spf_add_parent) 0 distance candidate vertex is special,
	  cost still to be initialised - asserting that new distance
	  is <= existing only makes sense where w already has a cost.
	  (ospf_spf_next) Infinite cost links should not be followed,
	  bar those of the root.

2007-04-30 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* ospfd.c: (ospf_network_match_iface) Comment out
	  COMPATIBILITY_MODE.  Going forward, the ospf "network" command
	  will use a simple test: does the network command prefix